src/test/deca/syntax/valid/without_class/quote_mark_in_str_chain.deca
// Description :
//    test de la détection de guillemets dans une chaîne de caractère
//
// Resultats :
//    ok
//
// Historique:
//    cree le 06/01/2023

{
    print("Vive \"Deca\"");
}